Fixing spacing on some view of trezor pegin flow
	We've fixed some of the view of the pegin flow on trezor.

--- a/src/styles/_exchange.scss
+++ b/src/styles/_exchange.scss
@@ -5,8 +5,8 @@
   align-items: center;
   justify-content: center;
   div p {
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 18px;
+    line-height: 23px;
     color: #000000;
   }
 
@@ -38,7 +38,32 @@
     }
   }
   .wallet-button:focus {
-    background-color: #01941B !important;
+    //background-color: #01941B !important;
+    .wallet-button-content {
+      color: #FFFFFF !important;
+    }
+  }
+
+  .wallet-button-thin {
+    width: 100% !important;
+    height: 100% !important;
+    margin: 16px 0 16px 0;
+    padding: 0 30px 0 30px !important;
+    background-color: #FFFFFF !important;
+    border-radius: 20px !important;
+    border: 1px solid #00B520 !important;
+    .wallet-button-content {
+      color: #00B520 !important;
+    }
+  }
+  .wallet-button-thin:hover {
+    background-color: #00B520 !important;
+    .wallet-button-content {
+      color: #FFFFFF !important;
+    }
+  }
+  .wallet-button-thin:focus {
+    //background-color: #01941B !important;
     .wallet-button-content {
       color: #FFFFFF !important;
     }
