--- a/src/styles/_site.scss
+++ b/src/styles/_site.scss
@@ -62,6 +62,7 @@ p {
 .v-btn {
   letter-spacing: normal !important;
   text-transform: none !important;
+  box-shadow: none !important;
 }
 
 .v-card {
